# base-ftp-server

./: README.md  pyproject.toml  setup.py
ftp/: server.py
