[tool.poetry]
name = "base-ftp-server"
version = "0.1.0"
description = "A super simple FTP server"
authors = ["AliRzaev <alirzaev1996@gmail.com>"]
license = "MIT"
packages = [
    { include = "ftp" }
]

[tool.poetry.dependencies]
python = "^3.9"
pyftpdlib = "^1.5.6"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
